# skilled-agent

./: .dockerignore  .gitignore  AUDIT_STATUS.md  AUDIT_STATUS_UPDATED.md  COMPONENT_TEST_REPORT.md  FINAL_INTEGRATION_TEST.md  KNOWLEDGE_GRAPH_FIX.md  LAYOUT_UPDATE_COMPLETE.md  MODEL_CONFIGURATION.md  Open Virtual Assistant.html  README.md  REGRESSION_FIXES.md  TEST_COVERAGE_FINAL_REPORT.md  TEST_COVERAGE_REPORT.md  UI_FIXES_APPLIED.md  UI_RESTORATION_COMPLETE.md  UI_RESTORATION_TEST_REPORT.md  agent.py  arize_tracing.py  audit-1-standards.txt  audit-2-duplication.txt  audit-3-logging.txt  audit-4-security.txt  audit-5-testing.txt  audit-6-dependencies.txt  docker-compose.yml  dspy_agent.py  enrich_knowledge.py  knowledge.py  knowledge_graph.py  llm.py  progress.md  pyproject.toml  requirements.txt  server.py  skills.py  start.sh
backend/: Dockerfile  arize_tracing.py  dspy_agent.py  knowledge.py  requirements.txt  server.py
backend/skills/: skills.py
docs/: ARCHITECTURE.md  SKILL_SELECTION_ANALYSIS.md
frontend/: Dockerfile  INTEGRATION_TEST_RESULTS.md  package-lock.json  package.json
knowledge/: README.md  SUMMARY.MD  index.md  sitemap-index.md  sitemap.md
output/: fibonacci.py  uuid.py
specs/: 2026-06-07-docker-containerization-design.md  2026-06-07-docker-containerization-plan.md
tests/: test_arize_tracing.py  test_config.py  test_dspy_agent_history.py  test_dspy_agent_skills.py  test_enrich_knowledge.py  test_file_io.py  test_knowledge.py  test_knowledge_graph.py  test_llm.py  test_path_security.py  test_server.py  test_skills.py  test_yaml_parser.py
(+184 files in other folders)
