[project]
name = "skilled-agent"
version = "0.1.0"
description = "A skilled agent for knowledge RAG"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "anthropic",
    "litellm",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
