[project]
name = "skilled-agent"
version = "0.1.0"
description = "A skilled agent for knowledge RAG"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "anthropic",
    "litellm",
    "opentelemetry-api>=1.41.0",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "aiofiles>=25.1.0",
    "kuzu>=0.11.3",
    "rank-bm25>=0.2.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
